--- a/jqmart/pom.xml
+++ b/jqmart/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>app.djxlab</groupId>
-	<artifactId>jqmart</artifactId>
+	<artifactId>jqmartapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jqmart</name>
-	<description>Demo project for Spring Boot</description>
+	<name>jqmartapi</name>
+	<description>Jerry’s Quik Mart API</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
