--- a/jqmartclient/package.json
+++ b/jqmartclient/package.json
@@ -24,6 +24,7 @@
     "angular-bootstrap-md": "^6.0.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
